@@ -72,6 +72,8 @@ Akos Maroy
 .SH ACKNOWLEDGEMENTS
 Some contributions by Jim Crilly
 .I <JCrilly@MSA.com>
+and Tom Gray
+.I <tomg@future-i.com>
 
 Ogg Vorbis encoding code based on the contribution of aNa|0Gue
 .I <analogue@glop.org>
