@@ -143,7 +143,7 @@ IceCast2 :: sendLogin ( void )                           throw ( Exception )
 
     str = "\nice-public: ";
     sink->write( str, strlen( str));
-    str = getIsPublic() ? "yes" : "no";
+    str = getIsPublic() ? "1" : "0";
     sink->write( str, strlen( str));
 
     if ( getName() ) {
@@ -188,6 +188,9 @@ IceCast2 :: sendLogin ( void )                           throw ( Exception )
   $Source$
 
   $Log$
+  Revision 1.2  2001/11/20 09:06:18  darkeye
+  fixed public stream reporting
+
   Revision 1.1  2001/09/14 19:31:06  darkeye
   added IceCast2 / vorbis support
 
